--- a/style.css
+++ b/style.css
@@ -7,11 +7,13 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     font-family: Street;
+    color: crimson;
+    text-align: center;
 }
 h1 {
-    color: crimson;
+
     font-size: 46px;
-    text-align: center;
+
 }
 
 table {
@@ -21,6 +23,7 @@ table {
     border-radius: 10px;
     background-color: black;
     margin: auto;
+    padding: 0%;
 }
 td, tr {
     width: 40px;
@@ -33,8 +36,10 @@ td, tr {
     text-align: center;
     background-position: center;
     background-repeat: no-repeat;
+    background-position-y: 80%;
     padding: 0%;
     margin: 0%;
+
 }
 th {
     padding: 0%;
@@ -48,6 +53,7 @@ th {
 }
 #ken {
     background-image: url(img/ken.png);
+
 }
 #chunli {
     background-image: url(img/ChunLi.png);
@@ -94,3 +100,21 @@ th {
 #mbison {
     background-image: url(img/MBison.png);
 }
+p {
+padding: 0%; 
+margin: 0%;
+margin-bottom: 50%;
+padding-bottom: 60%;
+}
+h2 {
+    font-size: 28px;
+}
+form {
+    display: block;
+    margin: auto;
+    background-color: black;
+    height: 600px;
+    width: 1100px;
+    border: 10px outset rgb(237, 175, 5);
+}
+
