--- a/style.css
+++ b/style.css
@@ -119,6 +119,9 @@ form {
     border: 10px outset rgb(237, 175, 5);
     border-radius: 10px;
 }
+fieldset {
+    margin-top: 3%;
+}
 legend {
     color: rgb(237, 175, 5);
     font-size: 14px;
@@ -129,8 +132,19 @@ label {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 16px;
 }
+#direccion {
+    margin-top: 2%;
+    margin-bottom: 2%;
 
-.inputA {
-    margin-bottom: 0%;
-    padding-bottom: 0%;
+}
+.cod {
+    display: flex;
+}
+.sexo {
+    color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px;
+}
+textarea {
+    width: 560px;
 }
